Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38466

REGRESSION: qmlscene crashes on an invalid code

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.3.0
    • 5.3.0 Beta1
    • None
    • 64bit ubuntu saucy
      3.11.0-19-generic x86_64
    • dfdf8116fee7db9cd52a95053724decc39895aa1 (qtdeclarative)

      Initializing non-existent group property with an element results in qmlscene crash (instead of qml bad syntax diagnostics output).

      See attached example

        1. crashqml.qml
          0.1 kB
          Yuri Baranov
        For Gerrit Dashboard: QTBUG-38466
        # Subject Branch Project Status CR V

            shausman Simon Hausmann
            baranov Yuri Baranov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes