Fix crash when loading QML that tries to set non-existent group properties

This happens when trying to search for implicit component definitions,
which only makes sense if we have a property cache.

Task-number: QTBUG-38466
Change-Id: I788159453efc24bcda1b9709a1933b49fd54d6a7
Reviewed-by: Liang Qi <liang.qi@digia.com>
Reviewed-by: Lars Knoll <lars.knoll@digia.com>